app/assets/styles/styles.css
/* ... */
@define-mixin atLarge{
    @media (min-width: 1200px) {
        @mixin-content;
    }
}









div {
    // outline: 1px solid red;
}

a {
    color: black;
    text-decoration: none;
}





html {  box-sizing: border-box;}
*, *:before, *:after {	box-sizing: inherit;}

html, body { 	
    color:#000;	
    width:100%;	
    min-width:100%;	
    height: 100%;	
    min-height: 100%; 

    font-stretch: 100%;

}
















body {
	background-color: $bodyColorStart;
	transition: all $bgColorChangeTime ease-in-out;
}
 
.box-shadow {
	box-shadow: 2px 3px 14px -3px rgba(0,0,0,0.25);
}

.box-shadow-bigger {
    box-shadow: 4px 5px 19px -3px rgba(0,0,0,0.25);
}

.box-shadow-biggest {
    box-shadow: 4px 5px 21px -1px rgba(0,0,0,0.25);
}

.box-shadow-bigger--no-top {
    box-shadow: 4px 12px 19px -3px rgba(0,0,0,0.18);
}

.intro-anim-container {
	height: 350vh;
	color: white;
	font-family: $primaryFont;
	font-size: 24px;
	// background-color: #191919;

    @mixin atMedium {
        height: 280vh;
    }
	
}
 
#text-wrapper {
    -webkit-text-rendering: optimizeSpeed !important;
    text-rendering: optimizeSpeed !important;
    -webkit-transform: translateZ(0) !important;
    font-kerning: none !important;


	position: fixed;
	z-index: 500;
	// background-color: blue;
	text-align: right;
	right: 0;
	bottom: 0;
	margin-right: 20px;
	margin-bottom: 20px;
    font-size: $frontAnimFontSize;
    pointer-events: none;

    

}

.trigger1 {
	position: absolute;
	background-color: white;
	height: 4px;
	width: 75vw;
	top: 110vh;
	right: 0;
}

.trigger2 {
	position: absolute;
	background-color: white;
	height: 4px;
	width: 75vw;
	top: 200vh;
	right: 0;

    @mixin atMedium {
        top: 150vh;
    }
}

.trigger3 {
	position: absolute;
	background-color: white;
	height: 4px;
	width: 75vw;
	top: 250vh;
	right: 0;

    @mixin atMedium {
        top: 200vh;
    }
}

.trigger4 {
	position: absolute;
	background-color: white;
	height: 4px;
	width: 75vw;
	top: 300vh;
	right: 0;

    @mixin atMedium {
        top: 250vh;
    }
}


.animate-bg-color {
	background-color: #FFFFFF;
}






.about-blurb-container {
	height: 100vh;
	width: 100vw;

    
	font-family: $secondaryFont;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	
	color: RGBA(180, 180, 180, 1.00);
	line-height: $lineHeight;
	font-size: $normalFontSize;
}

.about-blurb-container strong {
	color: black;
}

.about-blurb__image-container {
	width: 100px;
	height: 100px;
	margin-bottom: 20px;
}

.about-blurb__image {
	height: 100px;
	width: auto;
	border-radius: 50%;
    
}

.portfolio-project-container {
	min-height: 100vh;
	width: 100vw;
    margin-bottom: 80px;
    overflow: hidden;

    @mixin atLarge {
        display: flex;
        align-items: center;
        flex-direction: column;
    }
    
    
}

.portfolio-project__image-container {
    // overflow: hidden;
    
}

.portfolio-project__image-container img {
    max-width: 95vw;
    height: auto;
    position: relative;
    z-index: 100;

    @mixin atLarge {
        max-width: 800px;
        
    }
}



.section-gap {
    // background-color: yellow;
    height: 20vh;
}

.portfolio-section-header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: $headerFontSize;
    font-family: $primaryFont;
    margin: $marginBetweenSectionHeaderAndContent 0;
}

.portfolio-project__project-info-container {
    background-color: $projectInfoColor;
    width: 90vw;
    max-width: 700px;
    padding: 28px;
    margin-left: 28px;
    margin-top: -28px;
    margin-bottom: 20px;
    height: auto;
}

.pomodorank-image {
    opacity: 0;
    margin-left: 12px;
    transform: translateX(-48px);
    transition: all $primaryAnimationTime ease-in-out;
}

.pomodorank-info {
    transform: translateX(-24px);
    opacity: 0;
    transition: all $primaryAnimationTime ease-in-out;
}


.latest-work-bar {
    background-color: black;
    height: 4px;
    width: 30%;
    margin: 40px 0 0 0;
    transform: scale(0);
    transition: all $primaryAnimationTime ease-in-out;

}

.climbing-app-image {
    opacity: 0;
    transform: translateX(16px);
    transition: all $primaryAnimationTime ease-in-out;

}


.climbing-wall-app-info {
    transform: translateX(-24px);
    opacity: 0;
    transition: all $primaryAnimationTime ease-in-out;
}

.clear-view-image {
    opacity: 0;
    margin-left: 12px;
    transform: translateX(-48px);
    transition: all $primaryAnimationTime ease-in-out;
}

.clear-view-info {
    // margin-left: 0px;
    // overflow: hidden;
    margin-right: 20px;
    transform: translateX(24px);
    opacity: 0;
    transition: all $primaryAnimationTime ease-in-out;
}



.drift-racer-image {
    opacity: 0;
    transform: translateX(16px);
    transition: all $primaryAnimationTime ease-in-out;
}

.drift-racer-app-info {
    transform: translateX(-24px);
    opacity: 0;
    transition: all $primaryAnimationTime ease-in-out;
}





.animate-fade-and-move {
    transform: translateX(0px);
    opacity: 1;
}





.portfolio-project__header {
    text-align: center;
    font-family: $primaryFont;
    font-size: $portfolioHeaderFontSize;
    padding: 18px 0 16px 0;
}

.fa-external-link--header {
    font-size: 16px;
    // display: inline-block;
    position: absolute;
    margin-top: 4px;
    margin-left: 12px;
}

.portfolio-project__blurb-text {
    font-size: $normalFontSize;
    line-height: $lineHeight;
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;

    @mixin atMedium {
        max-width: 400px;
    }
}

.button {
    width: 200px;
    height: 64px;
}

#triggerThirdPortfolioAnim {
    transition: all 0.3s ease-in-out;
}

.animate-opacity {
    opacity: 0;
}
/* ... */

